CIVET Release Notes
This document describes the high-level changes made to the civet software
from release to release.  It is cumulative, with the most recent changes
listed first.  The most up-to-date version is in the civet git repository
redmine:/var/git/civet.git

Version 1.4.0

Features
 - Add "exit_if_exists" and "exit_test_logic" attributes to tools
 - Civet version now recorded in generated scripts

Version 1.3.1
-------------
Bug fixes
 - Create submitted_scripts directory with access only by the
   user running the pipeline (mode 600).

Features
 - Added a new bin subdirectory: bin/maintenance_programs.
 - Added a new program wall_time_ranges.py, which returns 
   - Requested
   - Max
   - Average
   - Min
   times for each cluster job in a pipeline.  A single parameter is
   a directory which is walked to find all the log directories contained
   therein.


Version 1.3.0
-------------
Bug fixes
 - Don't insert a space between an option's command_text and value if 
   command_text ends it either '=' or ':' when generating command line
 - Fix civet_status display of pipelines submitted with --no-submit

Features
 - Implemented "option override"
 - Implemented threads="True" tool options (value is taken from Tool's
   threads attribute)

Version 1.2.1
-------------
Bug fixes
 - Civet did not correctly detect command failures indicated by a non-
   zero return status.

This is a bug-fix-only release, and contains no new features.

Version 1.2.0
-------------
Bug fixes
 - Fix incorrect Torque error code -> error string mappings. Had to implement 
   our own lookup, since pbs_python had old (Torque 2.X) mappings

Features
 - Enhanced exception handling for job submission errors (users no longer
   see a stack trace when there is a Torque error, instead they simply 
   see a helpful error message) 
 - Modify parse_XML to allow an optional colon separated list of directories
   to search for XML tool definition files. The civet_run command now will 