@@ -8,7 +8,12 @@ Version 1.4.0
 
 Features
  - Add "exit_if_exists" and "exit_test_logic" attributes to tools
+ - Add "if_exists", "if_not_exists" attributes to commands
+ - Only add python to the list of modules if it is required to run 
+   the validate script, and the tool does not already specify a 
+   python modulefile
  - Civet version now recorded in generated scripts
+
 
 Version 1.3.1
 -------------
